fixed jumbotron buttons spacing

--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -55,12 +55,11 @@ $life-red: #E92828;
          font-size: 80px;
        }
      .button_to {
-       margin-top: -50px;
+       margin: -50px 0px 0px 0px;
        display: inline-block;
        border-style: none;
-       padding: 10px 15px 10px 15px;
+       padding: 10px 3px 10px 3px;
        font-family: 'Nunito Sans', sans-serif;
-       color: black;
      }
      input {
        width: 100%;
